# target/generated-sources/swagger/src/main/java/com/keytiles/api/model/hitcollection/v1/HitCollectionEndpointErrorCodes.java
@@ -44,6 +44,7 @@ public enum HitCollectionEndpointErrorCodes {
   AUTHENTICATION_USERDISABLED("authentication_userDisabled"),
   AUTHENTICATION_BASE64DECODEFAILED("authentication_base64DecodeFailed"),
   AUTHENTICATION_METHODNOTSUPPORTED("authentication_methodNotSupported"),
+  AUTHORIZATION_NOPERMISSION("authorization_noPermission"),
   REQUESTPARAMETER_WRONGFORMAT("requestParameter_wrongFormat"),
   REQUESTPARAMETER_MISSING("requestParameter_missing"),
   REQUESTPARAMETER_INVALID("requestParameter_invalid"),
@@ -60,9 +61,13 @@ public enum HitCollectionEndpointErrorCodes {
   RESOURCEDATA_CONFLICT("resourceData_conflict"),
   RESOURCEVERSION_MISMATCH("resourceVersion_mismatch"),
   MANDATORYEMAILSENDING_FAILED("mandatoryEmailSending_failed"),
+  REQUESTDATA_WRONGFORMAT("requestData_wrongFormat"),
+  REQUESTDATA_MISSING("requestData_missing"),
+  REQUESTDATA_INVALID("requestData_invalid"),
+  REQUESTDATA_NOT_SUPPORTED("requestData_not_supported"),
+  REQUESTDATA_CONTRADICTING("requestData_contradicting"),
   QUERY_LIMIT_REACHED("query_limit_reached"),
   FIELD_DEPRECATED("field_deprecated"),
-  DATA_CONTRADICTINGREQUEST("data_contradictingRequest"),
   UNDERLYING_RESOURCE_UNAVAILABLE("underlying_resource_unavailable");
 
   private String value;
